# Fast-Discord

./: CMakeLists.txt  FindOpus.cmake  FindSodium.cmake  LICENSE  README.md  res.qrc
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
etc/: Fast-Discord.pro
include/: token.h
include/api/: application.h  attachment.h  channel.h  client.h  embed.h  emoji.h  gateway.h  guild.h  guildmember.h  jsonutils.h  message.h  optional.h  overwrite.h  presence.h  request.h  ressourcemanager.h  role.h  snowflake.h  status.h  sticker.h  team.h  thread.h  user.h  voice.h  voicesocket.h
include/api/objects/: application.h  attachment.h  channel.h  client.h  connection.h  embed.h  emoji.h  error.h  guild.h  guildmember.h  message.h  overwrite.h  presence.h  role.h  snowflake.h  sticker.h  team.h  thread.h  user.h  voice.h
include/settings/: settings.h
include/ui/: attachmentfile.h  channelheader.h  closechannelbutton.h  downloadbutton.h  downloadlink.h  guildchannelwidget.h  guildfolder.h  guildicon.h  guildpill.h  guildwidget.h  homebutton.h  leftcolumn.h  mainwindow.h  markdownlabel.h  messagearea.h  messageseparator.h  messagetextinput.h  messagewidget.h  middlecolumn.h  privatechannel.h  rightcolumn.h  roundedimage.h  statusicon.h  usermenu.h  usermenubutton.h
include/ui/common/: basicwidgets.h  roundedimage.h  statusicon.h
include/ui/leftcolumn/: guildfolder.h  guildicon.h  guildpill.h  guildwidget.h  homebutton.h  leftcolumn.h
include/ui/middlecolumn/: callwidget.h  closecallbutton.h  closechannelbutton.h  guildchannelwidget.h  middlecolumn.h  privatechannel.h  usermenu.h  usermenubutton.h
include/ui/rightcolumn/: attachmentfile.h  channelheader.h  downloadbutton.h  downloadlink.h  fileuploadbutton.h  link.h  markdownlabel.h  memberlist.h  memberwidget.h  messagearea.h  messagetextinput.h  messagewidget.h  reaction.h  rightcolumn.h
include/ui/settings/: accessibility.h  appearance.h  authorizedapps.h  closebutton.h  connections.h  divider.h  menubutton.h  myaccount.h  popup.h  privacysafety.h  profile.h  radiobutton.h  scrollmenu.h  selectimagebutton.h  settings.h  settingsbutton.h  settingsinput.h  settingsmenu.h  switchbutton.h  userprofile.h
include/ui/settings/components/: closebutton.h  menubutton.h  popup.h  profile.h  radiobutton.h  scrollmenu.h  selectimagebutton.h  settingsbutton.h  slider.h
include/ui/settings/menus/: authorizedapps.h  myaccount.h  privacysafety.h  userprofile.h
resources/: com.enyoyoen.fast-discord.desktop
src/: main.cpp
src/api/: application.cpp  attachment.cpp  channel.cpp  client.cpp  embed.cpp  emoji.cpp  gateway.cpp  guild.cpp  guildmember.cpp  jsonutils.cpp  message.cpp  overwrite.cpp  presence.cpp  request.cpp  ressourcemanager.cpp  role.cpp  status.cpp  sticker.cpp  team.cpp  thread.cpp  user.cpp  voice.cpp  voicesocket.cpp
src/settings/: settings.cpp
src/ui/: attachmentfile.cpp  channelheader.cpp  closechannelbutton.cpp  downloadbutton.cpp  downloadlink.cpp  fileuploadbutton.cpp  guildchannelwidget.cpp  guildchannewidget.h  guildfolder.cpp  guildicon.cpp  guildpill.cpp  guildwidget.cpp  homebutton.cpp  leftcolumn.cpp  mainwindow.cpp  markdownlabel.cpp  messagearea.cpp  messageseparator.cpp  messagetextinput.cpp  messagewidget.cpp  middlecolumn.cpp  privatechannel.cpp  rightcolumn.cpp  roundedimage.cpp  statusicon.cpp  usermenu.cpp  usermenubutton.cpp
src/ui/common/: basicwidgets.cpp  roundedimage.cpp  statusicon.cpp
src/ui/leftcolumn/: guildfolder.cpp  guildicon.cpp  guildpill.cpp  guildwidget.cpp  homebutton.cpp  leftcolumn.cpp
src/ui/middlecolumn/: callwidget.cpp  closecallbutton.cpp  closechannelbutton.cpp  guildchannelwidget.cpp  middlecolumn.cpp  privatechannel.cpp  usermenu.cpp  usermenubutton.cpp
src/ui/rightcolumn/: attachmentfile.cpp  channelheader.cpp  downloadbutton.cpp  downloadlink.cpp  fileuploadbutton.cpp  link.cpp  markdownlabel.cpp  memberlist.cpp  memberwidget.cpp  messagearea.cpp  messageseparator.cpp  messagetextinput.cpp  messagewidget.cpp  reaction.cpp  rightcolumn.cpp
src/ui/settings/: accessibility.cpp  appearance.cpp  authorizedapps.cpp  closebutton.cpp  connections.cpp  divider.cpp  menubutton.cpp  myaccount.cpp  popup.cpp  privacysafety.cpp  profile.cpp  radiobutton.cpp  scrollmenu.cpp  selectimagebutton.cpp  settings.cpp  settingsbutton.cpp  settingsinput.cpp  settingsmenu.cpp  slider.cpp  switchbutton.cpp  userprofile.cpp
src/ui/settings/components/: closebutton.cpp  divider.cpp  menubutton.cpp  popup.cpp  profile.cpp  radiobutton.cpp  scrollmenu.cpp  selectimagebutton.cpp  settingsbutton.cpp  settingsinput.cpp  slider.cpp  switchbutton.cpp
src/ui/settings/menus/: accessibility.cpp  appearance.cpp  authorizedapps.cpp  connections.cpp  myaccount.cpp  privacysafety.cpp  userprofile.cpp
